feat: add assurance page

--- a/main.css
+++ b/main.css
@@ -56,6 +56,20 @@ p {
   padding: 20px;
 }
 
+ul {
+  margin-inline-start: 1rem;
+  padding: 1rem;
+  padding-top: 0;
+}
+
+li {
+  margin-bottom: 1rem;
+}
+
+li a {
+  font-size: 0.85rem;
+}
+
 footer {
   color: var(--color-brand-dark);
   display: flex;
